# haskell-excercises

./: LICENSE  README.md  haskell-excercises.cabal  intermediate-haskell-excercises.cabal
src/: Excercises.hs
test/: Spec.hs
